SF-IMP-0060: make geode proof independently admitted and deterministic